vlib/v/checker/tests/array_declare_element_b.vv
fn main() {
	arr := [1, 2]
	arr[1] := 1
}
